Scroll bar at bottom of page #10

--- a/src/components/NotFound/Header.css
+++ b/src/components/NotFound/Header.css
@@ -10,6 +10,13 @@
     font-size: 22px;
     text-align: center;
   }
+  html, body, #root {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+  }
   
   .item a {
     display: block;
