--- a/src/components/NotFound/snakegame.css
+++ b/src/components/NotFound/snakegame.css
@@ -1,10 +1,11 @@
 body {
     /* background-color: #1e1e1e; */
+
   }
   .game-area {
     position: relative;
     width: 600px;
-    height: 500px;
+    height: 400px;
     border: 2px solid #dc042c;
     border-radius: 10px;
     margin: 50px auto;
@@ -12,7 +13,18 @@ body {
     flex-wrap: wrap;
     box-shadow: 0 0 10px #abbfc0;
     background-color: black;
+    overflow: hidden; /* Prevent overflow */
+    box-sizing: border-box; /* Include border and padding in total dimensions */
+    color-scheme: light dark;
+    color: #f0f0f0;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    border: 2px solid #2b2b2b;
+    background-color: #000000;
   }
+  
   
   @media only screen and (max-width: 800px) {
     .game-area {
@@ -31,8 +43,7 @@ body {
     position: absolute;
     width: 2%;
     height: 2%;
-    background-color: #dc042c;
-    border: 1px solid white;
+    background-color: #3d46c0;
     z-index: 2;
   }
   
@@ -43,5 +54,14 @@ body {
     background-color: white;
     border-radius: 20px;
     z-index: 1;
+    animation: glowfood 1.5s linear infinite alternate;
+    box-shadow: 0px 0px 2px 2px #00e244;
+    background-color: #00e244;
   }
+  @keyframes glowfood {
+    to {
+      box-shadow: 0px 0px 12px 6px #00e244a8;
+    }
+  }
+  
   
