--- a/src/components/NotFound/snakegame.css
+++ b/src/components/NotFound/snakegame.css
@@ -43,7 +43,7 @@ body {
     position: absolute;
     width: 2%;
     height: 2%;
-    background-color: #3d46c0;
+    background-color: #0074d1;
     z-index: 2;
   }
   
