--- a/src/Pages/Scoreboard.css
+++ b/src/Pages/Scoreboard.css
@@ -15,6 +15,7 @@
 	border-radius: 10px;
 	margin-right: 10px;
 	box-shadow: 0px 3px 15px rgba(200, 198, 198, 0.15);
+	color: black;
 }
 .name {
 	position: relative;
@@ -26,4 +27,9 @@
 	position: relative;
 	display: inline-block;
 	width: 5%;
+}
+.email {
+	position: relative;
+	display: inline-block;
+	width: 30%;
 }
