--- a/src/Pages/CarGame.css
+++ b/src/Pages/CarGame.css
@@ -8,6 +8,26 @@ body {
     background-position: center;
     background-size: cover;
   }
+  .coin {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color: gold;
+    border-radius: 50%;
+    animation: glow 1.5s infinite alternate;
+    box-shadow: 0 0 10px gold, 0 0 20px gold, 0 0 30px gold;
+  }
+  
+  @keyframes glow {
+    0% {
+      opacity: 0.8;
+      box-shadow: 0 0 10px gold, 0 0 20px gold, 0 0 30px gold;
+    }
+    100% {
+      opacity: 1;
+      box-shadow: 0 0 20px gold, 0 0 40px gold, 0 0 60px gold;
+    }
+  }
   
   #score-div {
     position: absolute;
