added api integration

--- a/src/Pages/CarGame.css
+++ b/src/Pages/CarGame.css
@@ -1,4 +1,4 @@
-body {
+.main-container {
     height: 100%;
     width: 100%;
     margin: 0;
@@ -7,7 +7,7 @@ body {
     font-family: 'Josefin Sans', sans-serif;
     background-position: center;
     background-size: cover;
-  }
+  } 
   .coin {
     position: absolute;
     width: 20px;
@@ -45,7 +45,7 @@ body {
   }
   
   /* start container road styling */
-  #container {
+  #container-road {
     width: 40%;
     height: 100vh;
     left: 35%;
