--- a/src/Pages/Scoreboard.css
+++ b/src/Pages/Scoreboard.css
@@ -33,3 +33,19 @@
 	display: inline-block;
 	width: 30%;
 }
+[data-tooltip]::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    background-color: black;
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+    pointer-events: none;
+}
+
+[data-tooltip]:hover::after,
+[data-tooltip][data-tooltip]:not([data-tooltip=""])::after {
+    opacity: 1;
+}
