--- a/src/Pages/CarGame.css
+++ b/src/Pages/CarGame.css
@@ -1,206 +1,241 @@
+/* General styles */
+body {
+  margin: 0;
+  padding: 0;
+  /* overflow: hidden; */
+  /* background-color: #333;
+  color: white; */
+}
+
 .main-container {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    background: rgba(0, 0, 255, 0.4);
-    background-image: url('https://78.media.tumblr.com/abd19f1061e5ae8170c6648f992dc0e4/tumblr_ov30x79m1i1sjt6sco1_400.gif');
-    font-family: 'Josefin Sans', sans-serif;
-    background-position: center;
-    background-size: cover;
-  } 
-  .coin {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background-color: gold;
-    border-radius: 50%;
-    animation: glow 1.5s infinite alternate;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  background: rgba(0, 0, 255, 0.4);
+  background-image: url('https://78.media.tumblr.com/abd19f1061e5ae8170c6648f992dc0e4/tumblr_ov30x79m1i1sjt6sco1_400.gif');
+  font-family: 'Josefin Sans', sans-serif;
+  background-position: center;
+  background-size: cover;
+}
+
+.coin {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: gold;
+  border-radius: 50%;
+  animation: glow 1.5s infinite alternate;
+  box-shadow: 0 0 10px gold, 0 0 20px gold, 0 0 30px gold;
+}
+
+@keyframes glow {
+  0% {
+    opacity: 0.8;
     box-shadow: 0 0 10px gold, 0 0 20px gold, 0 0 30px gold;
   }
-  
-  @keyframes glow {
-    0% {
-      opacity: 0.8;
-      box-shadow: 0 0 10px gold, 0 0 20px gold, 0 0 30px gold;
-    }
-    100% {
-      opacity: 1;
-      box-shadow: 0 0 20px gold, 0 0 40px gold, 0 0 60px gold;
-    }
+  100% {
+    opacity: 1;
+    box-shadow: 0 0 20px gold, 0 0 40px gold, 0 0 60px gold;
   }
-  
-  #score-div {
-    position: absolute;
-    margin-top: 20%;
-    margin-left: 10%;
-    font-size: 25px;
-    background: white;
-    color: #454545;
-    padding: 15px;
-    box-shadow: 4px 4px 4px 1px #808080;
-  }
-  
-  #score-div p {
-    height: 20px;
-  }
-  
-  /* start container road styling */
+}
+
+#score-div {
+  position: absolute;
+  margin-top: 20%;
+  margin-left: 10%;
+  font-size: 25px;
+  background: white;
+  color: #454545;
+  padding: 15px;
+  box-shadow: 4px 4px 4px 1px #808080;
+}
+
+#score-div p {
+  height: 20px;
+}
+
+/* start container road styling */
+#container-road {
+  width: 40%;
+  height: 100vh;
+  left: 35%;
+  background: #333;
+  overflow: hidden;
+  position: relative;
+}
+
+.line {
+  width: 4%;
+  height: 30vh;
+  background: rgba(255, 255, 255, .8);
+  position: absolute;
+  margin-left: 48%;
+}
+
+#line-1 {
+  top: -150px;
+}
+
+#line-2 {
+  top: 150px;
+}
+
+#line-3 {
+  top: 450px;
+}
+
+.car {
+  position: absolute;
+  width: 40px;
+  height: 60px;
+  border-radius: 5px;
+  box-shadow: 3px 3px 3px black;
+}
+
+#car {
+  bottom: 10px;
+  left: 60%;
+  background: blanchedalmond;
+}
+
+.f-glass,
+.b-glass {
+  width: 60%;
+  height: 20%;
+  background: #484848;
+  position: absolute;
+  margin-left: 20%;
+}
+
+.f-glass {
+  top: 15px;
+  border-radius: 5px 5px 0 0;
+}
+
+.b-glass {
+  bottom: 15%;
+  border-radius: 0 0 5px 5px;
+}
+
+.f-light-l,
+.f-light-r {
+  position: absolute;
+  width: 20%;
+  height: 10%;
+  background: #efefef;
+  top: -6%;
+  margin-left: 10%;
+  border-radius: 5px 5px 0 0;
+}
+
+.f-light-r {
+  margin-left: 70%;
+}
+
+.f-tyre-l,
+.f-tyre-r,
+.b-tyre-l,
+.b-tyre-r {
+  position: absolute;
+  height: 20%;
+  width: 10%;
+  background: grey;
+}
+
+.f-tyre-l {
+  top: 20%;
+  left: -10%;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.f-tyre-r {
+  top: 20%;
+  left: 100%;
+  border-radius: 0 5px 5px 0;
+}
+
+.b-tyre-l {
+  bottom: 20%;
+  left: -10%;
+  border-radius: 5px 5px 0 0;
+}
+
+.b-tyre-r {
+  bottom: 20%;
+  left: 100%;
+  border-radius: 0 5px 5px 0;
+}
+
+#car-1 {
+  top: -100px;
+  left: 60%;
+  background: green;
+}
+
+#car-2 {
+  top: -200px;
+  left: 40%;
+  background: red;
+}
+
+#car-3 {
+  top: -350px;
+  left: 45%;
+  background: #26c5ff;
+}
+
+#restart-div {
+  position: absolute;
+  top: 0%;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #292929;
+  line-height: 100vh;
+  display: none;
+}
+
+#restart {
+  display: block;
+  width: 50%;
+  height: 80px;
+  background: #8a64ff;
+  color: #fff;
+  font-size: 25px;
+  border: none;
+  outline: none;
+  margin-left: 20%;
+  margin-top: 50%;
+}
+
+#restart-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
   #container-road {
-    width: 40%;
-    height: 100vh;
-    left: 35%;
-    background: #333;
-    overflow: hidden;
-    position: relative;
+    width: 90%;
+    left: 5%;
   }
-  
-  .line {
-    width: 4%;
-    height: 30vh;
-    background: rgba(255, 255, 255, .8);
-    position: absolute;
-    margin-left: 48%;
+  #score-div {
+    margin-top: 10%;
+    margin-left: 5%;
+    font-size: 20px;
   }
-  
-  #line-1 {
-    top: -150px;
-  }
-  
-  #line-2 {
-    top: 150px;
-  }
-  
-  #line-3 {
-    top: 450px;
-  }
-  
   .car {
-    position: absolute;
-    width: 40px;
-    height: 60px;
-    border-radius: 5px;
-    box-shadow: 3px 3px 3px black;
+    width: 30px;
+    height: 45px;
   }
-  
-  #car {
-    bottom: 10px;
-    left: 60%;
-    background: blanchedalmond;
+  .line {
+    width: 3%;
   }
-  
-  .f-glass,
-  .b-glass {
-    width: 60%;
-    height: 20%;
-    background: #484848;
-    position: absolute;
-    margin-left: 20%;
-  }
-  
-  .f-glass {
-    top: 15px;
-    border-radius: 5px 5px 0 0;
-  }
-  
-  .b-glass {
-    bottom: 15%;
-    border-radius: 0 0 5px 5px;
-  }
-  
-  .f-light-l,
-  .f-light-r {
-    position: absolute;
-    width: 20%;
-    height: 10%;
-    background: #efefef;
-    top: -6%;
-    margin-left: 10%;
-    border-radius: 5px 5px 0 0;
-  }
-  
-  .f-light-r {
-    margin-left: 70%;
-  }
-  
-  .f-tyre-l,
-  .f-tyre-r,
-  .b-tyre-l,
-  .b-tyre-r {
-    position: absolute;
-    height: 20%;
-    width: 10%;
-    background: grey;
-  }
-  
-  .f-tyre-l {
-    top: 20%;
-    left: -10%;
-    border-radius: 5px 5px 0px 0px;
-  }
-  
-  .f-tyre-r {
-    top: 20%;
-    left: 100%;
-    border-radius: 0 5px 5px 0;
-  }
-  
-  .b-tyre-l {
-    bottom: 20%;
-    left: -10%;
-    border-radius: 5px 5px 0 0;
-  }
-  
-  .b-tyre-r {
-    bottom: 20%;
-    left: 100%;
-    border-radius: 0 5px 5px 0;
-  }
-  
-  #car-1 {
-    top: -100px;
-    left: 60%;
-    background: green;
-  }
-  
-  #car-2 {
-    top: -200px;
-    left: 40%;
-    background: red;
-  }
-  
-  #car-3 {
-    top: -350px;
-    left: 45%;
-    background: #26c5ff;
-  }
-  
-  #restart-div {
-    position: absolute;
-    top: 0%;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: #292929;
-    line-height: 100vh;
-    display: none;
-  }
-  
   #restart {
-    display: block;
-    width: 50%;
-    height: 80px;
-    background: #8a64ff;
-    color: #fff;
-    font-size: 25px;
-    border: none;
-    outline: none;
-    margin-left: 20%;
-    margin-top: 50%;
+    width: 70%;
+    height: 60px;
+    font-size: 20px;
+    margin-left: 15%;
   }
-  
-  #restart-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
+}
