--- a/src/Pages/CarGame.css
+++ b/src/Pages/CarGame.css
@@ -20,11 +20,8 @@ body {
 
 .coin {
   position: absolute;
-  width: 20px;
-  height: 20px;
-  background-color: rgb(255, 251, 0);
-  clip-path: polygon(50% 0%, 65% 25%, 50% 50%, 65% 75%, 50% 100%, 35% 75%, 50% 50%, 35% 25%);
-  animation: glow 1.5s infinite alternate;
+  /* width: 20px;
+  height: 20px; */
 }
 
 @keyframes glow {
